# Autonomous_Wheelchair

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
config/: astar_plugin.xml  base_local_planner_params.yaml  controllers.yaml  costmap_common_params.yaml  global_costmap_params.yaml  joint_names_wheelchair.yaml  local_costmap_params.yaml  move_base_params.yaml  simulationMapping.rviz  simulationNavigation.rviz  urdf.rviz
doxygen/html/: annotated.html  class_goal-members.html  class_goal.html  class_grid_square-members.html  class_grid_square.html  class_navigate_robot-members.html  class_navigate_robot.html  classastar__plugin_1_1_a_star_planner-members.html  classastar__plugin_1_1_a_star_planner.html  classastar__plugin_1_1_a_star_planner__coll__graph.map  classastar__plugin_1_1_a_star_planner__coll__graph.md5  classastar__plugin_1_1_a_star_planner__inherit__graph.md5  classes.html  dir_000001_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  goal_8cpp.html  goal_8cpp__incl.map  goal_8cpp__incl.md5  goal_8hpp.html  goal_8hpp__dep__incl.map  goal_8hpp__dep__incl.md5  goal_8hpp__incl.map  goal_8hpp__incl.md5  goal_8hpp_source.html  graph_legend.html  grid_square_8hpp_source.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  (+22 more)
doxygen/html/search/: all_0.js  all_1.js  all_3.js  all_6.js  all_8.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
doxygen/latex/: annotated.tex  class_goal.tex  class_grid_square.tex  class_navigate_robot.tex  classastar__plugin_1_1_a_star_planner.tex  classastar__plugin_1_1_a_star_planner__coll__graph.md5  classastar__plugin_1_1_a_star_planner__inherit__graph.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  goal_8cpp.tex  goal_8cpp__incl.md5  goal_8hpp.tex  goal_8hpp__dep__incl.md5  goal_8hpp__incl.md5  hierarchy.tex  md__r_e_a_d_m_e.tex  navigate_robot_8cpp.tex  navigate_robot_8cpp__incl.md5  path_planner_8cpp.tex  path_planner_8cpp__incl.md5  refman.tex  test_grid_square_8cpp.tex  test_grid_square_8cpp__incl.md5  test_navigate_robot_8cpp.tex  test_navigate_robot_8cpp__incl.md5
hardware interface/wheelchair/: wheelchair.ino
include/: goal.hpp  gridSquare.hpp  navigateRobot.hpp  pathPlanner.hpp
launch/: amcl.launch  display.launch  gazebo.launch  simulation.launch  simulationMapping.launch  simulationNavigation.launch
launch/test/: testNavigator.launch  testPathPlanner.launch
map/: careCenter.pgm  careCenter.yaml
meshes/: base_link.STL  front_left_holder.STL  front_left_wheel.STL  front_right_holder.STL  front_right_wheel.STL  plank.STL  rear_left_holder.STL  rear_left_wheel.STL  rear_right_holder.STL  rear_right_wheel.STL
src/: goal.cpp  gridSquare.cpp  main.cpp  navigateRobot.cpp  pathPlanner.cpp
test/: main.cpp  testGridSquare.cpp  testNavigateRobot.cpp  testPathPlanner.cpp
urdf/: autonomous_wheelchair.csv  autonomous_wheelchair.urdf  wheelchair_lidar.xacro
world/: careCenter.world
