<package format="2">
  <name>autonomous_wheelchair</name>
  <version>1.0.0</version>
  <description>
    <p>A ROS Package to automate a Wheelchair</p>
  </description>
  <author>Raj Shinde</author>
  <maintainer email="raj0407@umd.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>nav_core</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>

  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <architecture_independent />
  </export>
</package>